--- a/Languages/English/Keyed/More Pause Events.xml
+++ b/Languages/English/Keyed/More Pause Events.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LanguageData>
-  <PausePredator.DisplayName>Pause on predator attack</PausePredator.DisplayName>
-  <PausePredator.Description>If enabled, when a predator attacks a colonist, or tamed animal, the game will pause.</PausePredator.Description>
+  <PausePredator.DisplayName>Predator attacks</PausePredator.DisplayName>
+  <PausePredator.Description>If enabled, the mod will attempt to pause the game when a predator chooses to attack a colonist or tamed animal.</PausePredator.Description>
 
-  <PauseFoodBinge.DisplayName>Pause on food binge</PauseFoodBinge.DisplayName>
-  <PauseFoodBinge.Description>If enabled, when a colonist goes on a food binge, the game will pause.</PauseFoodBinge.Description>
+  <PauseFoodBinge.DisplayName>Food binges</PauseFoodBinge.DisplayName>
+  <PauseFoodBinge.Description>If enabled, the mod will attempt to pause the game when a colonist goes on a food binge.</PauseFoodBinge.Description>
 
-  <PauseInsulting.DisplayName>Pause on insulting spree</PauseInsulting.DisplayName>
-  <PauseInsulting.Description>If enabled, when a colonist goes on an insulting spree, the game will pause.</PauseInsulting.Description>
+  <PauseInsulting.DisplayName>Insulting spree</PauseInsulting.DisplayName>
+  <PauseInsulting.Description>If enabled, the mod will attempt to pause the game when a colonist goes on an insulting spree.</PauseInsulting.Description>
 
-  <PauseCorpseObsession.DisplayName>Pause on corpse obsession</PauseCorpseObsession.DisplayName>
-  <PauseCorpseObsession.Description>If enabled, when a colonist gains corpse obsession, the game will pause.</PauseCorpseObsession.Description>
+  <PauseCorpseObsession.DisplayName>Corpse obsession</PauseCorpseObsession.DisplayName>
+  <PauseCorpseObsession.Description>If enabled, the mod will attempt to pause the game when a colonist tries to haul a corpse to a public area.</PauseCorpseObsession.Description>
 
-  <PauseSadisticRage.DisplayName>Pause on sadistic rage</PauseSadisticRage.DisplayName>
-  <PauseSadisticRage.Description>If enabled, when a colonist goes on a sadistic rage, the game will pause.</PauseSadisticRage.Description>
+  <PauseSadisticRage.DisplayName>Sadistic rage</PauseSadisticRage.DisplayName>
+  <PauseSadisticRage.Description>If enabled, the mod will attempt to pause the game when a colonist attacks a prisoner.</PauseSadisticRage.Description>
 
-  <PauseBerserk.DisplayName>Pause on berserk</PauseBerserk.DisplayName>
-  <PauseBerserk.Description>If enabled, when a colonist goes berserk, the game will pause.</PauseBerserk.Description>
+  <PauseBerserk.DisplayName>Berserk</PauseBerserk.DisplayName>
+  <PauseBerserk.Description>If enabled, the mod will attempt to pause the game when a colonist goes berserk.</PauseBerserk.Description>
 
-  <PauseCatatonia.DisplayName>Pause on catatonia</PauseCatatonia.DisplayName>
-  <PauseCatatonia.Description>If enabled, when a colonist goes catatonic, the game will pause.</PauseCatatonia.Description>
+  <PauseCatatonia.DisplayName>Catatonia</PauseCatatonia.DisplayName>
+  <PauseCatatonia.Description>If enabled, the mod will attempt to pause the game when a colonist goes into a catatonic state.</PauseCatatonia.Description>
 
-  <PauseGaveUp.DisplayName>Pause on give up</PauseGaveUp.DisplayName>
-  <PauseGaveUp.Description>If enabled, when a colonist gives up on the colony, the game will pause.</PauseGaveUp.Description>
+  <PauseGaveUp.DisplayName>Give up</PauseGaveUp.DisplayName>
+  <PauseGaveUp.Description>If enabled, the mod will attempt to pause the game when a colonist gives up on the colony.</PauseGaveUp.Description>
 
-  <PauseJailBreak.DisplayName>Pause on jail break</PauseJailBreak.DisplayName>
-  <PauseJailBreak.Description>If enabled, when a prisoner goes on a jail break, the game will pause.</PauseJailBreak.Description>
+  <PauseJailBreak.DisplayName>Jail break</PauseJailBreak.DisplayName>
+  <PauseJailBreak.Description>If enabled, the mod will attempt to pause the game when a colonist stages a prison break.</PauseJailBreak.Description>
 
-  <PauseMurderousRage.DisplayName>Pause on murderous rage</PauseMurderousRage.DisplayName>
-  <PauseMurderousRage.Description>If enabled, when a colonist goes on a murderous rage, the game will pause.</PauseMurderousRage.Description>
+  <PauseMurderousRage.DisplayName>Murderous rage</PauseMurderousRage.DisplayName>
+  <PauseMurderousRage.Description>If enabled, the mod will attempt to pause the game when a colonist goes on a murderous rage.</PauseMurderousRage.Description>
 
-  <PauseRunWild.DisplayName>Pause on run wild</PauseRunWild.DisplayName>
-  <PauseRunWild.Description>If enabled, when a colonist runs wild, the game will pause.</PauseRunWild.Description>
+  <PauseRunWild.DisplayName>Run wild</PauseRunWild.DisplayName>
+  <PauseRunWild.Description>If enabled, the mod will attempt to pause the game when a colonist runs wild.</PauseRunWild.Description>
 
-  <PauseSlaughter.DisplayName>Pause on slaughter</PauseSlaughter.DisplayName>
-  <PauseSlaughter.Description>If enabled, when a colonist goes on a slaughter spree, the game will pause.</PauseSlaughter.Description>
+  <PauseSlaughter.DisplayName>Slaughter</PauseSlaughter.DisplayName>
+  <PauseSlaughter.Description>If enabled, the mod will attempt to pause the game when a colonist goes on a slaughter spree.</PauseSlaughter.Description>
 
-  <PauseConfusion.DisplayName>Pause on confusion</PauseConfusion.DisplayName>
-  <PauseConfusion.Description>If enabled, when a colonist gets confused, the game will pause.</PauseConfusion.Description>
+  <PauseConfusion.DisplayName>Confusion</PauseConfusion.DisplayName>
+  <PauseConfusion.Description>If enabled, the mod will attempt to pause the game when a colonist enters a confused state.</PauseConfusion.Description>
 
-  <PauseSocialFight.DisplayName>Pause on social fight</PauseSocialFight.DisplayName>
-  <PauseSocialFight.Description>If enabled, when colonists start a social fight, the game will pause.</PauseSocialFight.Description>
+  <PauseSocialFight.DisplayName>Social fight</PauseSocialFight.DisplayName>
+  <PauseSocialFight.Description>If enabled, the mod will attempt to pause the game when a colonist starts a social fight.</PauseSocialFight.Description>
 </LanguageData>
