Added transport pod crashes as a supported event.

--- a/Languages/English/Keyed/More Pause Events.xml
+++ b/Languages/English/Keyed/More Pause Events.xml
@@ -42,4 +42,7 @@
 
   <PauseSocialFight.DisplayName>Social fight</PauseSocialFight.DisplayName>
   <PauseSocialFight.Description>If enabled, the mod will attempt to pause the game when a colonist starts a social fight.</PauseSocialFight.Description>
+
+  <PauseTransportCrash.DisplayName>Transport pod crashes</PauseTransportCrash.DisplayName>
+  <PauseTransportCrash.Description>If enabled, the mod will attempt ot pause the game when a transport pod crash occurs.</PauseTransportCrash.Description>
 </LanguageData>
