Send a letter to the player when a tamed animal is being hunted.

--- a/Languages/English/Keyed/More Pause Events.xml
+++ b/Languages/English/Keyed/More Pause Events.xml
@@ -45,4 +45,8 @@
 
   <PauseTransportCrash.DisplayName>Transport pod crashes</PauseTransportCrash.DisplayName>
   <PauseTransportCrash.Description>If enabled, the mod will attempt ot pause the game when a transport pod crash occurs.</PauseTransportCrash.Description>
+
+  <!-- Letters -->
+  <PausePredator.LetterLabel>{PREDATOR_labelShort} hunting {PREY_definite}</PausePredator.LetterLabel>
+  <PausePredator.LetterText>{PREDATOR} is hunting {PREY_definite} for food!</PausePredator.LetterText>
 </LanguageData>
